# pygame_gesture_kit

./: README.md  pyproject.toml
src/pygame_gesture_kit/: __init__.py  camera.py  gesture_recognizer.py  hand.py  hand_visualizer.py
src/pygame_gesture_kit/example/: main.py
